Use new HttpClient and HttpRequest, minor improvements